# anafi-opensource

./: README.md
notices/: police-notice.html
sources/: iio_generic_buffer-unknown
sources/busybox-unknown/: busybox.config
sources/e2fsprogs-1.42.12/: e2fsprogs.config
sources/ffmpeg-libav-unknown/: atom.mk  ffmpeg-libav.config
sources/ffmpeg-libav-unknown/ffmpeg-libav-unknown/: aconfig.in  atom.mk  configure  upstream-setup.sh
sources/glib-base-2.48.1/: atom.mk
sources/glib-base-2.48.1/glib-base-2.48.1/: autogen.sh  upstream-setup.sh
sources/gst-libav-1.12.0/: atom.mk
sources/gst-libav-1.12.0/gst-libav-1.12.0/: Makefile.am  autogen.sh  configure.ac  upstream-setup.sh
sources/gst-plugins-bad-1.12.1/: atom.mk  gst-plugins-bad.config
sources/gst-plugins-bad-1.12.1/gst-plugins-bad-1.12.1/: Makefile.am  aconfig.in  autogen.sh  common  configure.ac  upstream-setup.sh
sources/gst-plugins-base-1.12.0/: gst-plugins-base.config
sources/gst-plugins-base-1.12.0/gst-plugins-base-1.12.0/: Makefile.am  aconfig.in  atom.mk  autogen.sh  configure.ac  upstream-setup.sh
sources/gst-plugins-good-1.12.1/: atom.mk  gst-plugins-good.config
sources/gst-plugins-good-1.12.1/gst-plugins-good-1.12.1/: Makefile.am  aconfig.in  autogen.sh  configure.ac  upstream-setup.sh
sources/gstreamer-1.12.1/: gstreamer.config
sources/gstreamer-1.12.1/gstreamer-1.12.1/: Makefile.am  aconfig.in  atom.mk  autogen.sh  configure.ac  upstream-setup.sh
sources/gstreamer-1.12.1/gstreamer-1.12.1/libs/gst/parrot/: Makefile.am  gstparrot.h  gstparrotelementmeta.c  gstparrotelementmeta.h  gstparrotimagemeta.c  gstparrotimagemeta.h
sources/htop-2.0.1/: atom.mk  configure-ncurses.patch
sources/hwtoolbox-4.2.2/: atom.mk
sources/iftop-1.0pre4/: atom.mk
sources/iio_get-unknown/: atom.mk
sources/iio_get-unknown/iio_get-unknown/: iio_get.c
sources/libconfig-1.7.2/: atom.mk
sources/libconfig-1.7.2/libconfig-1.7.2/: ac_config.h.in  autogen.sh  configure  configure.ac  upstream-setup.sh
sources/libdaemon-0.14/: atom.mk
sources/libiberty-20161017/: atom.mk  libiberty_20161017.tar.bz2
sources/libiio-unknown/: atom.mk
sources/libiio-unknown/libiio-unknown/: .editorconfig  CMakeLists.txt  README  buffer.c  channel.c  (+11 more)
sources/liblz4-r131/: atom.mk  cmake.patch
sources/libnss-mdns-0.10/: atom.mk
sources/libusb-0.1.12/: atom.mk
sources/linux-4.9.0/: atom.mk  linux.config
sources/lsiio-unknown/: atom.mk
sources/lttng-modules-unknown/: arm_64_remove_sched_getattr_and_setattr_syscalls.patch  atom.mk  clock_offset_null.patch  lttng-modules-2.8.3.tar.bz2  parrot_trace.patch  syscall_ret.patch
sources/lttng-tools-2.8.2/: atom.mk  configure_remove_tests_and_doc.patch  lttng-tools-2.8.2.tar.bz2
sources/mtd-2.0.0/: atom.mk
sources/tree-1.6.0/: atom.mk  tree-1.6.0-fix-misleading-indentation.patch
sources/ulogger-kernel-unknown/: atom.mk
(+559 files in other folders)
